Add descriptions for secrets, and tableize. Also standardize widths.

--- a/config/characters.yml
+++ b/config/characters.yml
@@ -2,7 +2,7 @@
 - Alakdan:
     Race: the Tē
     Secrets:
-    - Luck
+    - Luck: Once per session, you may declare something almost unbelievably co-incidental or lucky that happens to your benefit.
     Keys:
     - Subservient: Hit this key when you act on another's orders.
     - Team Spirit: Hit this key when you act in the team's interest.
