Add Cuatzanixli (Ili)

--- a/config/characters.yml
+++ b/config/characters.yml
@@ -29,3 +29,34 @@
         - Bartering
         - Pushing Buttons
         - Sway
+
+- Cuatzanixli (Ili):
+    Race: the Nomhuatl
+    Secrets:
+    - Contacts: Ronseal
+    Keys:
+    - Guilt: Hit when acting to defend those you were once opposed to.
+    - Exposure: Hit this key when you act to remove colonies from the Sender's grasp.
+    - No Witnesses: Hit this key when you ensure no-one is left behind to witness your actions.
+    Traits:
+    - Nomhuatl:
+        Tags:
+        - Shapeshifter
+        - Adaptable
+        - Nimble
+        - Silent
+    - Police - The Gun:
+        Tags:
+        - Marksmanship
+        - Swordsmanship
+        - Disarm
+        - Improvised Weapon
+        - Throttle
+    - Police - The Rest:
+        Tags:
+        - Negotiate
+        - Royal Warships
+        - Connections
+        - Investigate
+        - Part of a Team
+        - Access Codes
