--- a/config/characters.yml
+++ b/config/characters.yml
@@ -60,3 +60,34 @@
         - Investigate
         - Part of a Team
         - Access Codes
+
+- Jonah Palethorpe:
+    Race: the Human Race
+    Secrets:
+    - Nondescript: Ronseal
+    Keys:
+    - Cuckoo: Hit this key when accepted unknowingly into a community to which he does not belong.
+    - New Frontier: Hit this key when he serves the Earth and Britain.
+    - Only Way Home: Hit this key when you protect the Scientist.
+    Traits:
+    - Rough Work:
+        Tags:
+        - Shooting
+        - Stabbing
+        - Murder
+        - Marksman
+        - From The Shadows
+        - Unfazed
+    - Gentleman Spy:
+        Tags:
+        - Fast Talk
+        - Cover Story
+        - Blending In
+        - Bluster
+        - Light-Fingered
+        - Quick Exit
+    - A Life Of Privilege:
+        Tags:
+        - Balliol College
+        - Theoretical Physics
+        - Advanced Mathematics
