Minor character updates

--- a/config/characters.yml
+++ b/config/characters.yml
@@ -12,7 +12,7 @@
         Tags:
         - Mechanic
         - Electrician
-        - Handy-scorpion
+        - Handy-Scorpion
         - Improvised Weapons
         - Hacking
     - Medic:
@@ -51,7 +51,7 @@
         - Swordsmanship
         - Disarm
         - Improvised Weapon
-        - Throttle
+        - He Fell Down The Stairs
     - Police - The Rest:
         Tags:
         - Negotiate
