Add the scientist's name.

--- a/config/characters.yml
+++ b/config/characters.yml
@@ -68,7 +68,7 @@
     Keys:
     - Cuckoo: Hit this key when accepted unknowingly into a community to which he does not belong.
     - New Frontier: Hit this key when he serves the Earth and Britain.
-    - Only Way Home: Hit this key when you protect the Scientist.
+    - Only Way Home: Hit this key when you protect Alessandro Massino.
     Traits:
     - Rough Work:
         Tags:
