--- a/config/characters.yml
+++ b/config/characters.yml
@@ -3,6 +3,7 @@
     Race: the Tē
     Secrets:
     - Luck: Once per session, you may declare something almost unbelievably co-incidental or lucky that happens to your benefit.
+    - Command: Once per session an NPC will follow any non-suicidal command you give.
     Keys:
     - Subservient: Hit this key when you act on another's orders.
     - Team Spirit: Hit this key when you act in the team's interest.
@@ -34,6 +35,7 @@
     Race: the Nomhuatl
     Secrets:
     - Contacts: Ronseal
+    - Blink: You may teleport to anywhere you can see.
     Keys:
     - Guilt: Hit when acting to defend those you were once opposed to.
     - Exposure: Hit this key when you act to remove colonies from the Sender's grasp.
@@ -65,6 +67,7 @@
     Race: the Human Race
     Secrets:
     - Nondescript: Ronseal
+    - Technopath: Once per session a machine (including A.I.s) will do what you want.
     Keys:
     - Cuckoo: Hit this key when accepted unknowingly into a community to which he does not belong.
     - New Frontier: Hit this key when he serves the Earth and Britain.
