Add description for Nondescript

--- a/config/characters.yml
+++ b/config/characters.yml
@@ -66,7 +66,7 @@
 - Jonah Palethorpe:
     Race: the Human Race
     Secrets:
-    - Nondescript: Ronseal
+    - Nondescript: When you blend into the background, people will not notice you unless you give them a reason to.
     - Technopath: Once per session a machine (including A.I.s) will do what you want.
     Keys:
     - Cuckoo: Hit this key when accepted unknowingly into a community to which he does not belong.
