change Human Race to Humans.

--- a/config/characters.yml
+++ b/config/characters.yml
@@ -64,7 +64,7 @@
         - Access Codes
 
 - Jonah Palethorpe:
-    Race: the Human Race
+    Race: the Humans
     Secrets:
     - Nondescript: When you blend into the background, people will not notice you unless you give them a reason to.
     - Technopath: Once per session a machine (including A.I.s) will do what you want.
