Use second person for secrets.

--- a/config/characters.yml
+++ b/config/characters.yml
@@ -69,9 +69,9 @@
     - Nondescript: When you blend into the background, people will not notice you unless you give them a reason to.
     - Technopath: Once per session a machine (including A.I.s) will do what you want.
     Keys:
-    - Cuckoo: Hit this key when accepted unknowingly into a community to which he does not belong.
-    - New Frontier: Hit this key when he serves the Earth and Britain.
-    - Only Way Home: Hit this key when you protect Alessandro Massino.
+    - Cuckoo: Hit this key when accepted unknowingly into a community to which you do not belong.
+    - New Frontier: Hit this key when you serve the Earth and Britain.
+    - Only Way Home: Hit this key when you act to protect Alessandro Massino.
     Traits:
     - Rough Work:
         Tags:
