--- a/config/characters.yml
+++ b/config/characters.yml
@@ -128,3 +128,35 @@
         - Sweet-talker
         - Innocent Face
         - Deceit
+
+- Alessandro Massino:
+    Race: the Humans
+    Secrets:
+    - MacGuiver: Once per session you may automatically produce a plot relevant device from available materials.
+    - Outer Self: Once per sessin you can summon an alterate self with a dice pool of six in any one thing.
+    Keys:
+      - Home: You want little more than to return to Earth. Hit this key when you do something that brings you closer to returning home. Break this key if you pass up a chance to return, or consign yourself to never returning.
+      - Humanity: Jonah Palethorpe may have flung you across the universe, but he is the only other human for (as far as you know) thousands of lightyears. Hit this key when you act against your own interests to help or protect another human being.
+      - Pursuit of Knowledge: Hit this key when you allow your curiousity to get the better of you and act put yourself in danger or act against your own interests in the pursuit of knowldge.
+    Traits:
+    - Science:
+        Tags:
+        - Employ Device
+        - Analyze
+        - Investigate
+        - Reverse Engineer
+        - Fabricate
+        - Theory
+        - Physics
+    - Field Medic:
+        Tags:
+        - Medicine
+        - Healing
+        - Surgery
+        - Sedatives
+    - Conscript:
+        Tags:
+        - Shooting
+        - Tactics
+        - Hand-to-Hand
+        - Self-Defence
