Add Corilia (planet)

--- a/config/planets.yml
+++ b/config/planets.yml
@@ -25,3 +25,23 @@
         Home to some rather terrifying drinks specials and a curiously stocked
         holo jukebox, it’s also reputed to be a meeting place for the
         anti-royalists movement.'
+- Corilia:
+    Description: 'A large planet on the edge of the empire with three moons,
+      Primus, Secundus and Tertius, of which Primus and Tertius support life.
+      The planet its self if covered in a single, all consuming ruin of a past
+      civilisation. Access to the planet is forbidden, although enforcement is
+      patchy at best and a thriving trade of artifacts and trinkets scavenged
+      from the surface exists on Corilia Primus and Corilia Tertius.'
+    Noteworthy places:
+      - Corilia Primus: 'Sparsely populated and has a climate well suited to a
+      fruit the locals produce alcohol from. The drink, similar to gin, is the
+      system''s primary export.'
+      - Corilia Secundus: 'Home to an Imperial Naval base until approx. fifty
+      years ago. The local ruling class fell out of favour and naval assets were
+      moved to more politically expedient climes. A group of smugglers now
+      occupy the base.'
+      - Corilia Tertius: 'Home to around a billion people, largely supporting
+      Corilia University and the archeological teams they send to the planet''s
+      surface. There have been troubles recently between archeologists and
+      groups of Senders who have declared themselves the "inheritors of Corilia"
+      and settled on the planet.'
