its self -> itself

--- a/config/planets.yml
+++ b/config/planets.yml
@@ -28,7 +28,7 @@
 - Corilia:
     Description: 'A large planet on the edge of the empire with three moons,
       Primus, Secundus and Tertius, of which Primus and Tertius support life.
-      The planet its self if covered in a single, all consuming ruin of a past
+      The planet itself if covered in a single, all consuming ruin of a past
       civilisation. Access to the planet is forbidden, although enforcement is
       patchy at best and a thriving trade of artifacts and trinkets scavenged
       from the surface exists on Corilia Primus and Corilia Tertius.'
