Add Lupa (planet)

--- a/config/planets.yml
+++ b/config/planets.yml
@@ -45,3 +45,27 @@
       surface. There have been troubles recently between archeologists and
       groups of Senders who have declared themselves the "inheritors of Corilia"
       and settled on the planet.'
+- Lupa:
+    Description: 'The ancestral home of the Tē, this desert world is only
+      sparsely populated, with most of that population in the capital on the
+      edge of the largest oasis on the planet. The Tē are a peaceful and
+      co-operative race, and after their conquer by the Sun King, the lack of
+      resources and low chance of uprising meant the planet was mostly left to
+      its own devices.'
+    Notable people:
+      - 'Lupa is a word with few travellers across it, most citizens staying in
+      the town they were born in. However, there is a rumour of a traveller who
+      brings water to the thirsty and lends aid to the needy - Inaama. This
+      person, if they exist, is also said to control all smuggling on the planet.'
+      - 'Goverment of the cities is done consistently in the same, traditional
+      manner. Every 50 years a leader, or Puno, is selected at random from the
+      working population, to lead and direct the civilisation. This role has no
+      glamour to it, but is considered an honourable duty.'
+    Noteworthy places:
+      - Basa: 'The main city of Lupa. Upwards of a million Tē live here, making
+        this a roiling metropolis in modern terms. As with all cities on the
+        planet is is next to an oasis, with convenient trade routes provided by
+        the nearby canyons. It is rumoured that underneath Basa is a great
+        treasure, but ground scans have indicated nothing more than aquifers.
+        Given the planet''s arid nature, these are believed to be the source of
+        the myth.'
