--- a/config/planets.yml
+++ b/config/planets.yml
@@ -64,7 +64,7 @@
     Noteworthy places:
       - Basa: 'The main city of Lupa. Upwards of a million Tē live here, making
         this a roiling metropolis in modern terms. As with all cities on the
-        planet is is next to an oasis, with convenient trade routes provided by
+        planet it is next to an oasis, with convenient trade routes provided by
         the nearby canyons. It is rumoured that underneath Basa is a great
         treasure, but ground scans have indicated nothing more than aquifers.
         Given the planet''s arid nature, these are believed to be the source of
