Add lots of new planets.

--- a/config/planets.yml
+++ b/config/planets.yml
@@ -69,3 +69,63 @@
         treasure, but ground scans have indicated nothing more than aquifers.
         Given the planet''s arid nature, these are believed to be the source of
         the myth.'
+- Paradise:
+    Description: 'A resort planet, a luxury destination for wealthy and
+      influential Senders. Its shining beaches, temperate weather and exotic
+      jungles required only mild terraforming to draw customers from across the
+      galaxy to relax and enjoy themselves. Paradise''s luxurious resorts are
+      staffed almost entirely by Omiri, a diminutive species of six-limbed
+      primates who are in fashion as servants. Large portions of the jungle have
+      been cleared and replanted to make them habitable for the Omiri, who
+      prefer a more arid climate.'
+    Notable people:
+      - 'The sentient natives of Paradise, the Ss''ur, are
+      reptilian, and call the planet Ahh''ssst. They have never been in fashion
+      as servants, and their hunting culture is increasingly unviable as more
+      and more of the planet''s ecosystem is repurposed for Sender leisure.'
+- Khō Gayā:
+    Description: 'A rebel planet which has managed to resist the Rajya''s
+      attempts at control so far. Populated by renegade espers, criminals,
+      bounty hunters, deserters, and revolutionaries, Khō Gayā is a harsh place
+      with bitterly cold and miserable weather. The espers maintain a
+      telekenetic shield around the planet to protect it from Royal attack,
+      though rumour has it that the Sun King''s forces are working on ways to
+      circumvent this.'
+    Notable people:
+      - 'Lazarus D''ark, Professional Rebel. Once the official Enemy of the
+      Rajya, until the rogue AIs became a greater threat. Has led countless
+      rebellions, and though he''s always lost eventually he won enough to
+      become something of a legend. Betrayed, arrested and tortured by the
+      secret police, fled to Khō Gayā after escaping.'
+      - 'Sapphire Voyage. A formidable bounty hunter with a famous bloodlust.
+      Frequent partner in crime of D''ark.'
+- Ānsū:
+    Description: 'A galactic Leprosarium, the landmasses of which are covered
+      with red plants. A constant rainfall covers most of the planet with
+      complex underground caverns holding most of the water before it evaporates
+      back into the atmosphere. Random data from the archive: Rumours persist
+      of something called the "Red Brain", though specifics of who or what it is
+      are scarce.'
+    Noteworthy places:
+      - Merrowmont: 'The largest colony on the planet. The sufferers are tended
+        to by an enigmatic sect of monks who turn away almost all visitors to
+        the planet.'
+- Hakeldama:
+    Description: 'A pleasure planet, a planet-wide theme park. Hakeldama used
+      robots to recreate a popular range of children''s entertainment, allowing
+      their wealthy clientele to live among the characters of their youths.
+      Quarantined 13 years ago following an unknown incident, possibly involving
+      the rogue AIs.'
+    Notable people:
+      - 'A Royal Navy Rear Admiral, Shannon Harker, crashed her dreadnought on
+      Hakeldama several years ago. Harker and her crew have not been heard from
+      since and are believed dead.'
+- Udyōga IV:
+    Description: 'A techno-industrial world, one of the key manufacturing
+      centres of the Rajya. The surface has entirely vanished beneath
+      interlocking factories. Clan Gulzar has responsibility for the world and
+      its output.'
+    Noteworthy places:
+      - Facility 17: 'A secure R&D site used for the development of cutting edge
+        starship weapons. It is possibly one of the most heavily guarded places
+        outside of the Sun King''s palace.'
