--- a/config/characters.yml
+++ b/config/characters.yml
@@ -16,6 +16,7 @@
         - Handy-Scorpion
         - Improvised Weapons
         - Hacking
+        - Tricorder
     - Medic:
         Tags:
         - Field Dressing
