--- a/config/characters.yml
+++ b/config/characters.yml
@@ -31,6 +31,7 @@
         - Bartering
         - Pushing Buttons
         - Sway
+        - Pathetic (Specialization)
 
 - Alessandro Massino:
     Race: the Humans
@@ -46,11 +47,12 @@
         Tags:
         - Employ Device
         - Analyze
-        - Investigate
+        - Investigate (Specialization)
         - Reverse Engineer
         - Fabricate
         - Theory
         - Physics
+        - Intuit
     - Field Medic:
         Tags:
         - Medicine
@@ -105,6 +107,7 @@
     - Daredevil: You thrive in dangerous situations. Hit this key when you do something cool that is risky and reckless (especially piloting stunts).
     - Imposter: You are in disguise, passing yourself off as not a person regarded as dangerous by the Monarchy. Hit your key when you perform well enough to fool someone with your disguise.
     - Fraternity: Hit this key when your character is influenced by them or when you show how deep your bond is.
+    - Rebel: The Empire is your greatest foe. Hit this key whenever you strike a blow against them or kill an Imperial agent.
     Traits:
     - Taker:
         Tags:
@@ -114,13 +117,14 @@
         - Awareness
         - Threats
         - Thrown Weapons
+        - Marksmanship
     - Wayfarer:
         Tags:
         - Navigation
         - Morphology
         - Geographical Awareness
         - Wireless/Comms
-        - Tricky Flying
+        - Tricky Flying (Specialization)
     - Xaa:
         Tags:
         - Rough Skin
@@ -150,10 +154,11 @@
         Tags:
         - Fast Talk
         - Cover Story
-        - Blending In
+        - Blending In (Specialization)
         - Bluster
         - Light-Fingered
         - Quick Exit
+        - Air of Authority
     - A Life Of Privilege:
         Tags:
         - Balliol College
@@ -168,12 +173,12 @@
     Keys:
     - Daredevil: You thrive in dangerous situations. Hit this key when you do something cool that is risky and reckless (especially piloting stunts).
     - Rival: You hate someone. Hit this key when you outperform or outfox them in any particular area.
-    - Rebel: The Empire is your greatest foe. Hit this   key whenever you strike a blow against them or kill an Imperial agent.
+    - Rebel: The Empire is your greatest foe. Hit this key whenever you strike a blow against them or kill an Imperial agent.
     Traits:
     - Sender:
         Tags:
         - Telepath
-        - Telekinetic
+        - Telekinetic (Specialization)
         - Metal
         - Internal Compass
     - Underground Criminal:
@@ -188,6 +193,8 @@
         - Unpredictable
         - Stab
         - Shoot
+        - Swordsmanship
+        - Marksmanship
     - Youth:
         Tags:
         - Sweet-talker
