--- a/config/characters.yml
+++ b/config/characters.yml
@@ -1,6 +1,7 @@
 ---
 - Alakdan:
     Race: the Tē
+    Luck: 7
     Secrets:
     - Luck: Once per session, you may declare something almost unbelievably co-incidental or lucky that happens to your benefit.
     - Command: Once per session an NPC will follow any non-suicidal command you give.
@@ -35,6 +36,7 @@
 
 - Alessandro Massino:
     Race: the Humans
+    Luck: 7
     Secrets:
     - MacGuiver: Once per session you may automatically produce a plot relevant device from available materials.
     - Outer Self: Once per sessin you can summon an alterate self with a dice pool of six in any one thing.
@@ -68,6 +70,7 @@
 
 - Cuatzanixli (Ili):
     Race: the Nomhuatl
+    Luck: 7
     Secrets:
     - Contacts: Ronseal
     - Blink: You may teleport to anywhere you can see.
@@ -100,6 +103,7 @@
 
 - Grei:
     Race: The Xaa
+    Luck: 7
     Secrets:
     - Throwing: Anything is a dangerous missile in your hands.
     - Time: Once per session you can retroactively have reacted to something in the last minute.
@@ -134,6 +138,7 @@
 
 - Jonah Palethorpe:
     Race: the Humans
+    Luck: 8
     Secrets:
     - Nondescript: When you blend into the background, people will not notice you unless you give them a reason to.
     - Technopath: Once per session a machine (including A.I.s) will do what you want.
@@ -167,6 +172,7 @@
 
 - Kinoumenon Kinei:
     Race: The Senders
+    Luck: 7
     Secrets:
     - Name: You are infamous. People may not know your face, but when they hear your name they stop in awe.
     - Nigh Invulnerable: Once per session, when you would otherwise mark a condition, you can choose not to do so.
