--- a/config/characters.yml
+++ b/config/characters.yml
@@ -12,9 +12,9 @@
     Traits:
     - Many Claws Make Light Work:
         Tags:
+        - Handy-Scorpion (Specialization)
         - Mechanic
         - Electrician
-        - Handy-Scorpion
         - Improvised Weapons
         - Hacking
         - Tricorder
