Add new secret to Alakdan

--- a/config/characters.yml
+++ b/config/characters.yml
@@ -5,6 +5,7 @@
     Secrets:
     - Luck: Once per session, you may declare something almost unbelievably co-incidental or lucky that happens to your benefit.
     - Command: Once per session an NPC will follow any non-suicidal command you give.
+    - Tenebrous Egress: Once per session, you can disappear into the shadows and escape from any scene or confrontation.
     Keys:
     - Subservient: Hit this key when you act on another's orders.
     - Team Spirit: Hit this key when you act in the team's interest.
