Add Jotun, planet of giant spiders.

--- a/config/planets.yml
+++ b/config/planets.yml
@@ -129,3 +129,22 @@
       - Facility 17: 'A secure R&D site used for the development of cutting edge
         starship weapons. It is possibly one of the most heavily guarded places
         outside of the Sun King''s palace.'
+- Jotun:
+    Description: 'A small, mountainous planet on the edge of its habitable zone
+        mostly covered in an acrid fog. Small patches of land at the top of the
+        highest mountains peek above the fog. Jotun is occupied by an intelligent
+        vaguely humanoid race called the Jotnar and a species of giant aracnids
+        called the Risar. The Jotnar are willing subjects of the Sun King,
+        believing the Senders to be the fulfillment of an ancient prophesy
+        regarding the Risar. The Risar are notable because despite lacking
+        intelligence of thier own, they repeat the contents of any telepathic
+        messages in the vicinity. Attempts at removing the Risar from Jotun have
+        proven unsuccessful.'
+    Notable People:
+        - 'The Jotnar are organised into groups of no more than three thousand
+        and choose their leaders each lunar month by random ballot. The Rajya have
+        installed "advisors" to each of these groups who monitor them for 
+        insurrection.'
+        - 'Jotun has several Sender built holiday resorts popular with high
+        ranking senders and their families. It is not uncommon to find naval
+        officers, politicians and diplomats in these resorts.'
