Add new planets.

--- a/config/planets.yml
+++ b/config/planets.yml
@@ -131,20 +131,53 @@
         outside of the Sun King''s palace.'
 - Jotun:
     Description: 'A small, mountainous planet on the edge of its habitable zone
-        mostly covered in an acrid fog. Small patches of land at the top of the
-        highest mountains peek above the fog. Jotun is occupied by an intelligent
-        vaguely humanoid race called the Jotnar and a species of giant aracnids
-        called the Risar. The Jotnar are willing subjects of the Sun King,
-        believing the Senders to be the fulfillment of an ancient prophesy
-        regarding the Risar. The Risar are notable because despite lacking
-        intelligence of thier own, they repeat the contents of any telepathic
-        messages in the vicinity. Attempts at removing the Risar from Jotun have
-        proven unsuccessful.'
-    Notable People:
-        - 'The Jotnar are organised into groups of no more than three thousand
-        and choose their leaders each lunar month by random ballot. The Rajya have
-        installed "advisors" to each of these groups who monitor them for 
-        insurrection.'
-        - 'Jotun has several Sender built holiday resorts popular with high
-        ranking senders and their families. It is not uncommon to find naval
-        officers, politicians and diplomats in these resorts.'
+      mostly covered in an acrid fog. Small patches of land at the top of the
+      highest mountains peek above the fog. Jotun is occupied by an intelligent
+      vaguely humanoid race called the Jotnar and a species of giant aracnids
+      called the Risar. The Jotnar are willing subjects of the Sun King,
+      believing the Senders to be the fulfillment of an ancient prophesy
+      regarding the Risar. The Risar are notable because despite lacking
+      intelligence of thier own, they repeat the contents of any telepathic
+      messages in the vicinity. Attempts at removing the Risar from Jotun have
+      proven unsuccessful.'
+    Notable people:
+      - 'The Jotnar are organised into groups of no more than three thousand
+      and choose their leaders each lunar month by random ballot. The Rajya have
+      installed "advisors" to each of these groups who monitor them for
+      insurrection.'
+      - 'Jotun has several Sender built holiday resorts popular with high
+      ranking senders and their families. It is not uncommon to find naval
+      officers, politicians and diplomats in these resorts.'
+- Celbon 2-A:
+    Description: 'C2A was once a tranquil garden planet, beloved by naturalists
+      and space-bird watchers. About 50 years ago the first festical was
+      announced on C2A, a quiet, folksy affair to appeal to space-hippies.
+      Since then the number of festivals, parties and all ou benders has
+      turned the entire planet into a destination for students and stoners.
+      Acts are brought in from all over the galaxy to perform meaning that
+      there is never a moment where C2A falls quiet. A sprawling system of
+      underground trains and travellators links the planet together.'
+    Noteworthy places:
+      - Mount Celbonulon: 'Not actually that tall, but most of the terrain is
+      flat so it towers in comparison. Home to some of the only truly
+      permanent buildings including central security and the first aid station
+      (which is now bigger than most centralised hospitals).'
+      - Xlaterollapalooze: 'The largest festival on the planet, covers over
+      200km^2. The ground is a constant carpet of yellow plastic cups and
+      paper plates. Chances are that the largest acts in the galaxy are
+      playing there at any one time.'
+      - Celabon 345: 'The first stage to be established on the planet.
+      Abandoned after the death of "Radiometric Silence" onstage during a
+      performance. The area is entirely overrun by wildlife, every year a few
+      crazed fans will sneak in to see where Ip, Ap and Op bit the dust.'
+    Notable people:
+      - 'Mr. Glideol is owner of over 70% of the planet''s land and renowned
+      recluse. There are many theories about just who, and where, Glideol is.
+      Every few years someone will claim to have caught him on camera
+      backstage, but the photos themselves never emerge. Most people think he
+      lives in an underground bunker beneath Mt. Celbonulon and makes money by
+      blackmailing the bands he hires.'
+      - 'Crazy Leffie is a sender who claims to have come to C2A for the first
+      festival and never left. Certainly looks like heís been living off of
+      food truck pizza and synthahol for half a century. Knows C2A better than
+      anyone.'
