--- a/config/characters.yml
+++ b/config/characters.yml
@@ -3,8 +3,8 @@
     Race: the Tē
     Luck: 8
     Secrets:
+    - Hormones: Once per session any biological NPC will follow any non-suicidal command you give.
     - Luck: Once per session, you may declare something almost unbelievably co-incidental or lucky that happens to your benefit.
-    - Command: Once per session an NPC will follow any non-suicidal command you give.
     - Tenebrous Egress: Once per session, you can disappear into the shadows and escape from any scene or confrontation.
     Keys:
     - Subservient: Hit this key when you act on another's orders.
