Add stealth to Alakdan

--- a/config/characters.yml
+++ b/config/characters.yml
@@ -11,6 +11,10 @@
     - Team Spirit: Hit this key when you act in the team's interest.
     - Tinkerer: Hit this key when you modify, improve, or patch some tech.
     Traits:
+    - Stealth:
+        Tags:
+        - Systemic Racism (Specialization)
+        - Not Worth Noticing
     - Many Claws Make Light Work:
         Tags:
         - Handy-Scorpion (Specialization)
