--- a/config/characters.yml
+++ b/config/characters.yml
@@ -86,6 +86,7 @@
     Secrets:
     - Contacts: Ronseal
     - Blink: You may teleport to anywhere you can see.
+    - It'll be fine: It is most definitely *not* going to be fine
     Keys:
     - Guilt: Hit when acting to defend those you were once opposed to.
     - Exposure: Hit this key when you act to remove colonies from the Sender's grasp.
@@ -128,7 +129,7 @@
     Secrets:
       - Throwing: Anything is a dangerous missile in your hands.
       - Time: Once per session you can retroactively have reacted to something in the last minute.
-      - It'll be fine: It is most definitely *not* going to be fine - 4
+      - It'll be fine: It is most definitely *not* going to be fine
     Keys:
     - Imposter: You are in disguise, passing yourself off as not a person regarded as dangerous by the Monarchy. Hit your key when you perform well enough to fool someone with your disguise.
     - Fraternity: Hit this key when your character is influenced by them or when you show how deep your bond is.
