--- a/config/characters.yml
+++ b/config/characters.yml
@@ -15,6 +15,8 @@
         Tags:
         - Systemic Racism (Specialization)
         - Not Worth Noticing
+        - Matte Exoskeleton
+        - Compressible
     - Many Claws Make Light Work:
         Tags:
         - Handy-Scorpion (Specialization)
