--- a/config/characters.yml
+++ b/config/characters.yml
@@ -17,6 +17,7 @@
         - Not Worth Noticing
         - Matte Exoskeleton
         - Compressible
+        - Hard Shell, Soft Feet
     - Many Claws Make Light Work:
         Tags:
         - Handy-Scorpion (Specialization)
