--- a/config/planets.yml
+++ b/config/planets.yml
@@ -181,3 +181,55 @@
         festival and never left. Certainly looks like heís been living off of
         food truck pizza and synthahol for half a century. Knows C2A better than
         anyone.'
+- Cuitzanlo:
+    Description: "Top Secret | Level 16 Access Only | Report by Dr. Inrol
+      Rendaya [Deceased] |
+
+      Cuitzanlo was discovered in [REDACTED] hidden within
+      the orbit of the binary star system Freintis. Discovered by [REDACTED]
+      after their onboard computer missed a decimal point whilst calculating
+      warp coordinates. The planet is small with a radius only a little over
+      12km. Over [REDACTED] of the surface is ocean, most of the landmass is
+      found around the equator. This combined with an oxygen rich atmosphere has
+      led to a predominant rainforest environment. Several small islands to the
+      North are mostly arid and appear to be uninhabited. Due to its dominant
+      species Cuitzanlo has been under the protection of the Raj since its
+      discovery. Scramblers kept in orbit prevent anything from warping into the
+      vicinity and laser stations evaporate any unauthorised artefacts from
+      entering or leaving the atmosphere. There are several small villages
+      scattered through the habitable areas, there are two major cities, each on
+      opposite sides of the planet. The Nomhuatl are the obvious dominant
+      species of the planet. They are roughly senderoid but tend to be shorter
+      and slighter. Their eyes tend to be larger in order for them to navigate
+      more easily through the dark forest. Their digits also tend to be longer
+      than that of an average sender. There seems to be little sexual dimorphism
+      in the species and they seemed unfamiliar with the concept. Their skins
+      are usually a mottled green-brown, but their unique skill sets means that
+      this is subject to change. |
+
+      Co-ordinates | [REDACTED].867, [REDACTED].393, [REDACTED].542"
+    Noteworthy places:
+      - Przlincos: 'The city is built entirely from natural materials, wood,
+          vines, and grass. The city is the living centre for the Nomhuatl. The
+          centre of the city sits on a platform made out of clay bricks which are
+          constantly replaces and maintained. Small figures of various deities made
+          from the same clay can be found scattered through the city. There are no
+          prestige houses, all the Nomhuatl live in large communal halls around the
+          platform whist the centre seems to act as a marketplace and religious
+          centre.'
+      - Ombelliferae: 'Opposite to Przlincos. Ombelliferae is a city made
+          entirely of stone, most brought from the coast and the Northern islands.
+          The city is a mirror of Przlincos. However, the platform in the centre of
+          the city holds a single stone mausoleum which is constantly being expanded
+          by the inhabitants. All the residents of Ombelliferae are close to death;
+          the old, the sick and the injured. They leave their homes weeks, months,
+          sometimes years earlier to make the journey to this final resting place.'
+    Notable people:
+      - 'Petzol appears to be an honorary title, a single healthy member of the
+        society from Przlincos is left to tend to the dead and dying in
+        Ombelliferae. When a Petzol dies another takes on both their appearance
+        and their title.'
+      - 'Tauxi is another  honorary title passed down in the same nature as the
+        Petzol. A sort of spiritual leader, they appear to have the final say in
+        all disputes. The position has been held by a Raj sympathiser for over
+        50 years.'
